Closed Bug 1421939 Opened 7 years ago Closed 7 years ago

Fix RenderDXGIYCbCrTextureHostOGL::GetSize()

Categories

(Core :: Graphics: WebRender, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

(Whiteboard: [wr-mvp])

Attachments

(1 file)

During working for Bug 1405562, I found that YUV4222, YUV422 videos are not rendered correctly with RenderDXGIYCbCrTextureHostOGL. I used https://wiki.xiph.org/TheoraTestsuite for testing.

With investigation, RenderDXGIYCbCrTextureHostOGL::GetSize() does not return correct value for YUV4222, YUV422 videos.
Assignee: nobody → sotaro.ikeda.g
Blocks: 1405562
Attachment #8933236 - Flags: review?(nical.bugzilla)
Attachment #8933236 - Flags: review?(nical.bugzilla) → review+
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c367f6c5f7d8
Fix RenderDXGIYCbCrTextureHostOGL::GetSize() r=nical
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [wr-mvp]
https://hg.mozilla.org/mozilla-central/rev/c367f6c5f7d8
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: